...
    <string name="go_to_position_label">Go to this Position</string>

    <!-- Playback history -->
    <string name="clear_history_label">Clear History</string>

    <!-- Other -->
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset">Reset</string>
    <string name="author_label">Author</string>
    <string name="language_label">Language</string>
    <string name="url_label">URL</string>
...
    <string name="mark_all_seen_label">Mark all as seen</string>
    <string name="mark_all_seen_msg">Marked all Episodes as seen</string>
    <string name="mark_all_seen_confirmation_msg">Please confirm that you want to mark all episodes as seen.</string>
    <string name="show_info_label">Show information</string>
    <string name="rename_feed_label">Rename Podcast</string>
    <string name="remove_feed_label">Remove Podcast</string>
    <string name="share_label">Share&#8230;</string>
    <string name="share_link_label">Share Link</string>
    <string name="share_file_label">Share File</string>
    <string name="share_link_with_position_label">Share Link with Position</string>
    <string name="share_feed_url_label">Share Feed URL</string>
    <string name="share_item_url_label">Share Episode File URL</string>
    <string name="share_item_url_with_position_label">Share Episode File URL with Position</string>
...
