...
        android:lines="1"
        android:ellipsize="end"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="@dimen/text_size_small"/>

    <Button
        android:id="@+id/butSubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/subscribe_label"
        android:layout_below="@id/txtvAuthor"
        android:layout_alignParentRight="true"
...
