...

    <!-- Playback history -->
    <string name="clear_history_label">Clear History</string>

    <!-- Other -->
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset">Reset</string>
    <string name="url_label">URL</string>
    <string name="support_funding_label">Support</string>
    <string name="support_podcast">Support this Podcast</string>
...
    <string name="shownotes_label">Shownotes</string>
    <string name="shownotes_contentdescription">swipe up to read shownotes</string>
    <string name="episodes_suffix">\u0020episodes</string>
    <string name="close_label">Close</string>
    <string name="retry_label">Retry</string>
    <string name="auto_download_label">Include in auto downloads</string>
    <string name="auto_delete_label">Auto Delete Episode</string>
    <string name="feed_volume_reduction">Volume Reduction</string>
    <string name="feed_volume_reduction_summary">Turn down volume for episodes of this podcast: %1$s</string>
    <string name="feed_volume_reduction_off">Off</string>
    <string name="feed_volume_reduction_light">Light</string>
    <string name="feed_volume_reduction_heavy">Heavy</string>
    <string name="parallel_downloads">%1$d parallel downloads</string>
    <string name="feed_auto_download_global">Global default</string>
...
    <string name="player_go_to_picture_in_picture">Picture-in-picture mode</string>
    <string name="unknown_media_key">AntennaPod - Unknown media key: %1$d</string>
    <string name="error_file_not_found">File not found</string>
    <string name="no_media_label">Item does not contain a media file</string>

    <!-- Queue operations -->
    <string name="lock_queue">Lock Queue</string>
    <string name="queue_locked">Queue locked</string>
    <string name="queue_unlocked">Queue unlocked</string>
    <string name="queue_lock_warning">If you lock the queue, you can no longer swipe or reorder episodes.</string>
    <string name="checkbox_do_not_show_again">Do not show again</string>
    <string name="clear_queue_label">Clear Queue</string>
    <string name="undo">Undo</string>
    <string name="move_to_top_label">Move to top</string>
    <string name="move_to_bottom_label">Move to bottom</string>
    <string name="sort">Sort</string>
    <string name="keep_sorted">Keep sorted</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="episode_title">Episode title</string>
    <string name="feed_title">Podcast title</string>
    <string name="random">Random</string>
    <string name="smart_shuffle">Smart Shuffle</string>
    <string name="clear_queue_confirmation_msg">Please confirm that you want to clear the queue of ALL of the episodes in it</string>
    <string name="time_left_label">Time left:\u0020</string>

    <!--  Variable Speed -->
    <string name="speed_presets">Presets</string>
...
    <string name="synchronization_choose_title">Choose synchronization provider</string>
    <string name="synchronization_force_sync_summary">Re-synchronize all subscriptions and episode states</string>
    <string name="synchronization_sync_summary">Synchronize subscription and episode state changes</string>
    <string name="dialog_choose_sync_service_title">Choose synchronization provider</string>
    <string name="pref_playback_speed_sum">Customize the speeds available for variable speed playback</string>
    <string name="pref_feed_playback_speed_sum">The speed to use when starting audio playback for episodes in this podcast</string>
    <string name="pref_feed_skip">Auto Skip</string>
    <string name="pref_feed_skip_sum">Skip introductions and ending credits.</string>
    <string name="pref_feed_skip_ending">Skip last</string>
    <string name="pref_feed_skip_intro">Skip first</string>
    <string name="pref_feed_skip_ending_toast">Skipped last %d seconds</string>
    <string name="pref_feed_skip_intro_toast">Skipped first %d seconds</string>
    <string name="pref_playback_time_respects_speed_title">Adjust media info to playback speed</string>
...
    <string name="apply_action">Apply action</string>
    <string name="play_chapter">Play chapter</string>
    <string name="prev_chapter">Previous chapter</string>
    <string name="next_chapter">Next chapter</string>

    <!-- Feed settings/information screen -->
    <string name="authentication_label">Authentication</string>
    <string name="authentication_descr">Change your username and password for this podcast and its episodes.</string>
    <string name="feed_tags_label">Tags</string>
    <string name="feed_tags_summary">Change the tags of this podcast to help organize your subscriptions</string>
    <string name="feed_folders_include_root">Show in main list</string>
    <string name="multi_feed_common_tags_info">{fa-info-circle} Only common tags from all selected subscriptions are shown. Other tags stay unaffected.</string>
    <string name="auto_download_settings_label">Auto Download Settings</string>
    <string name="episode_filters_label">Episode Filter</string>
    <string name="episode_filters_description">List of terms used to decide if an episode should be included or excluded when auto downloading</string>
    <string name="episode_filters_include">Include</string>
    <string name="episode_filters_exclude">Exclude</string>
    <string name="episode_filters_duration">Minimal Duration (in minutes)</string>
    <string name="episode_filters_hint">Single words \n\"Multiple Words\"</string>
    <string name="keep_updated">Keep Updated</string>
    <string name="keep_updated_summary">Include this podcast when (auto-)refreshing all podcasts</string>
    <string name="auto_download_disabled_globally">Auto download is disabled in the main AntennaPod settings</string>
    <string name="statistics_time_played">Time played:</string>
    <string name="statistics_total_duration">Total duration (estimate):</string>
    <string name="statistics_duration_played_episodes">Duration of played episodes:</string>
    <string name="statistics_episodes_on_device">Episodes on the device:</string>
...
    <string name="share_dialog_link_to_episode">Link to episode</string>
    <string name="share_dialog_media_file_label">Media file</string>
    <string name="share_starting_position_label">Starting from</string>

    <!-- Audio controls -->
    <string name="audio_controls">Audio controls</string>
    <string name="playback_speed">Playback Speed</string>
    <string name="audio_effects">Audio Effects</string>
    <string name="stereo_to_mono">Downmix: Stereo to mono</string>
    <string name="sonic_only">Sonic only</string>
    <string name="exoplayer_only">ExoPlayer only</string>

    <!-- proxy settings -->
...
