...
    tools:ignore="MissingTranslation"
    >

    <!-- Activitiy and fragment titles -->
    <string name="app_name">AntennaPod</string>
    <string name="feeds_label">Feeds</string>
    <string name="add_feed_label">Add podcast</string>
    <string name="podcasts_label">PODCASTS</string>
    <string name="episodes_label">EPISODES</string>
    <string name="new_episodes_label">New episodes</string>
    <string name="all_episodes_label">All episodes</string>
    <string name="new_label">New</string>
    <string name="waiting_list_label">Waiting list</string>
...
    <string name="go_to_position_label">Go to this position</string>

    <!-- Playback history -->
    <string name="clear_history_label">Clear history</string>

    <!-- Other -->
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="author_label">Author</string>
    <string name="language_label">Language</string>
    <string name="podcast_settings_label">Settings</string>
    <string name="cover_label">Picture</string>
    <string name="error_label">Error</string>
...
    <string name="folder_not_empty_dialog_msg">The folder you have selected is not empty. Media downloads and other files will be placed directly in this folder. Continue anyway?</string>
    <string name="set_to_default_folder">Choose default folder</string>
    <string name="pref_pausePlaybackForFocusLoss_sum">Pause playback instead of lowering volume when another app wants to play sounds</string>
    <string name="pref_pausePlaybackForFocusLoss_title">Pause for interruptions</string>

    <!-- Online feed view -->
    <string name="subscribe_label">Subscribe</string>
    <string name="subscribed_label">Subscribed</string>
    <string name="downloading_label">Downloading...</string>

    <!-- Content descriptions for image buttons -->
    <string name="show_chapters_label">Show chapters</string>
    <string name="show_shownotes_label">Show shownotes</string>
...
